# bevy-minesweeper-tut

./: Cargo.toml
board_plugin/: Cargo.toml
board_plugin/src/: event.rs  lib.rs
board_plugin/src/component/: bomb.rs  bomb_neighbor.rs  coordinates.rs  uncover.rs
board_plugin/src/components/: bomb.rs  coordinates.rs
board_plugin/src/resource/: board.rs  board_options.rs  loaded_assets.rs  mod.rs  tile.rs  tile_map.rs
board_plugin/src/resources/: board.rs  board_options.rs  mod.rs  tile_map.rs
board_plugin/src/system/: input.rs  uncover.rs
board_plugin/src/systems/: input.rs
src/: main.rs
