[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
default = []
debug = ["board_plugin/debug", "bevy-inspector-egui"]

[dependencies]
bevy = "0.9"

# Hierarchy inspector debug
bevy-inspector-egui = { version = "0.16", optional = true }

board_plugin = { path="./board_plugin" }

[workspace]
resolver = "2"
members = ["board_plugin"]