[package]
name = "board_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = ["colored", "bevy-inspector-egui"]

[dependencies]
bevy = "0.9"
serde = "1.0"
rand = "0.8"

# Console Debug
colored = { version = "2.0", optional = true }
# Hierarchy inspector debug
bevy-inspector-egui = { version = "0.16", optional = true }

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["add", "display", "is_variant", "deref", "deref_mut", "from"]